<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".artworklist.presentation.ArtworksFragment">


    <LinearLayout
        android:id="@+id/boxLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:id="@+id/artworkImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/arrowBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_arrow2"
                android:src="@drawable/arrow_1" />

            <TextView
                android:id="@+id/menuBarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_top_bottom_text_search"
                android:layout_marginTop="@dimen/margin_start_top_bottom_text_search"
                android:layout_marginBottom="@dimen/margin_start_top_bottom_text_search"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/name_category"
                android:textColor="@color/white"
                android:textSize="@dimen/size_text_search" />
        </LinearLayout>

        <ImageView
            android:id="@+id/bigImageArtwork"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_image_artwork_detail"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:id="@+id/artworkDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_text_exhibit"
                android:layout_marginTop="@dimen/margin_top_bottom_text_exhibit"
                android:layout_marginBottom="@dimen/margin_top_bottom_text_exhibit"
                android:layout_weight="90"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nameArtwork"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/inter_bold"
                    android:lines="1"
                    android:text="@string/nameArtwork"
                    android:textSize="@dimen/size_text_artwork_detail" />

                <TextView
                    android:id="@+id/yearArtwork"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/inter_regular"
                    android:lines="1"
                    android:text="@string/yearArtwork"
                    android:textSize="@dimen/size_text_year_artwork" />

                <TextView
                    android:id="@+id/authorArtwork"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/inter_bold"
                    android:lines="1"
                    android:text="@string/AuthorArtwork"
                    android:textSize="@dimen/size_text_author" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_bottom_text_exhibit"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/inter_bold"
                        android:lines="1"
                        android:text="@string/type"
                        android:textSize="@dimen/size_text_details" />

                    <TextView
                        android:id="@+id/typeArtwork"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_start_vertical_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/inter_regular"
                        android:lines="1"
                        android:textSize="@dimen/size_text_details"
                        tools:text="@tools:sample/lorem" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/inter_bold"
                        android:lines="1"
                        android:text="@string/material"
                        android:textSize="@dimen/size_text_details" />

                    <TextView
                        android:id="@+id/materialsArtwork"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_start_vertical_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/inter_regular"
                        android:lines="1"
                        android:textSize="@dimen/size_text_details"
                        tools:text="@tools:sample/lorem" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/inter_bold"
                        android:lines="1"
                        android:text="@string/size"
                        android:textSize="@dimen/size_text_details" />

                    <TextView
                        android:id="@+id/sizesArtwork"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_start_vertical_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/inter_regular"
                        android:lines="1"
                        android:textSize="@dimen/size_text_details"
                        tools:text="@tools:sample/lorem" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/inter_bold"
                        android:lines="1"
                        android:text="@string/gallery"
                        android:textSize="@dimen/size_text_details" />

                    <TextView
                        android:id="@+id/galleryArtwork"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_start_vertical_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/inter_regular"
                        android:lines="1"
                        android:textSize="@dimen/size_text_details"
                        tools:text="@tools:sample/lorem" />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/inter_regular"
                    android:lines="7"
                    tools:text="@tools:sample/lorem/random"
                    android:textSize="@dimen/size_text_details" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imgSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_bottom_text_exhibit"
                app:srcCompat="@drawable/bookmark_red_small" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>